feat: Añadidos ejemplos de ejecucion