@@ -40,8 +40,15 @@ With custom parameters:
 ```bash
 sbt "run --subscription-file subscriptions.json --entities-dir data --top-k 15"
 ```
-Example with **local_subscriptions.json** with **data/valid_entities**:
+Example with **local_subscriptions.json** with **data/valid_entities** (ACTIVATE reddit-mock):
 ```bash
+sbt "run --subscription-file data/local_subscriptions.json --entities-dir data/valid_entities --top-k 10"
+```
+Example with java 17 & spark running (ACTIVATE reddit-mock): 
+```bash
+JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64 \
+PATH="$JAVA_HOME/bin:$PATH" \
+SBT_OPTS="--add-exports=java.base/sun.nio.ch=ALL-UNNAMED" \
 sbt "run --subscription-file data/local_subscriptions.json --entities-dir data/valid_entities --top-k 10"
 ```
 
